# bdd

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
bdd/: __main__.py  bddconfig.py  bddio.py  bddservice.py  bddsubprocess.py  bootdevcliconfig.py  cli.py  client.py  commands.py  lesson.py  progress.py
docs/: CONTRIBUTING.md  bdd.md  video-recording.md
tests/: bddservice_test.py  commands_test.py  progress_test.py
